# LongCat-Video

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requirements_avatar.txt  run_demo_avatar_single_audio_to_video.py  run_demo_avatar_single_audio_to_video_fjk.py  run_demo_long_video_fjk.py  run_demo_text_to_video.py  uvvars.sh
longcat_video/audio_process/: wav2vec2.py
longcat_video/modules/: attention.py
longcat_video/modules/avatar/: attention.py
